--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     <p>You've stumbled upon the web site of Erin Brown (a.k.a. the Geek Prof).</p>
 
-    <p>There is not much to see here at the moment, but why not follow me on <a href="http://twitter.com/thegeekprof">Twitter</a> and <a href="http://github.com/thegeekprof">GitHub</a>?</p>
+    <p>There is not much to see here at the moment.</p>
+
+    <p>Why not follow me on <a href="http://twitter.com/thegeekprof">Twitter</a> and <a href="http://github.com/thegeekprof">GitHub</a>?</p>
 
   </body>
 </html>
