--- a/resume.html
+++ b/resume.html
@@ -2,10 +2,74 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Resume</title>
+    <title>Erin Brown</title>
+    <link href="css/style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <h1>Resume</h1>
+    <div id="container">
+      <header>
+        <h1>Erin Brown</h1>
+        <address>
+          <span>University of Miami, Wolfson 2011</span>
+          <span>305-284-2235</span>
+          <span><a href="http://twitter.com/thegeekprof">@thegeekprof</a></span>
+        </address>
+        <img src="img/erin.jpg" alt="Erin Brown" />
+      </header>
+
+      <nav>
+        <ul>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
+        </ul>
+      </nav>
+
+      <main>
+        <section id="education">
+          <h2>Education</h2>
+
+          <article>
+            <h3>University of Florida</h3>
+            <p>Gainesville, Fla.</p>
+            <p>M.A. Mass Communication</p>
+            <p><small>Specialization in Web Design &amp; Online Communication</small></p>
+            <p><time>May 2014</time></p>
+          </article>
+
+          <article>
+            <h3>University of Florida</h3>
+            <p>Gainesville, Fla.</p>
+            <p>B.S. Journalism</p>
+            <p><small>Specialization in Online Media</small></p>
+            <p><time>May 2003</time></p>
+          </article>
+        </section>
+
+        <section id="experience">
+          <h2>Experience</h2>
+
+          <article>
+            <h3>University of Miami</h3>
+            <p>Coral Gables, Fla.</p>
+            <p>Lecturer</p>
+            <p><span class="dates"><time>Jan. 2014</time> - Present</span></p>
+            <p><small>Courses: Web Design, Programming for Interactivity, Elements of Newsgathering</small></p>
+          </article>
+
+          <article>
+            <h3>Fox Sports Florida</h3>
+            <p>Fort Lauderdale, Fla.</p>
+            <p>Beat Writer</p>
+            <p><span class="dates"><time>Jan. 2013</time> - Present</span></p>
+            <p><small>Beat(s): Florida Panthers (NHL); Miami Dolphins (NFL) Miami Heat (NBA), Miami Marlins (MLB) and Tampa Bay Lightning (NHL) in a backup role.</small></p>
+        </section>
+      </main>
+      <footer>
+        <p><a href="javascript:window.print();">Print Resume</a></p>
+      </footer>
+    </div>
+
   </body>
 </html>
