--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <p>There is not much to see here at the moment.</p>
 
-    <p>Why not follow me on <a href="http://twitter.com/thegeekprof">Twitter</a> and <a href="http://github.com/thegeekprof">GitHub</a>?</p>
+    <p>Why not follow me on <a href="http://twitter.com/thegeekprof">Twitter</a> and <a href="http://github.com/thegeekprof">GitHub</a>? Or check out my very rudimentary <a href="resume.html">r&eacute;sum&eacute;</a>?</p>
 
   </body>
 </html>
