Added cat photos.

--- a/cats.html
+++ b/cats.html
@@ -7,5 +7,6 @@
   <body>
     <h1>My Cats</h1>
     <p>I have two cats, Flynn and Quorra.</p>
+    <img src="img/flynn-and-quorra.png" alt="Flynn and Quorra" />
   </body>
 </html>
